page layout issuesfixed

--- a/css/home.css
+++ b/css/home.css
@@ -8,7 +8,7 @@
 }
 
 .home-text-ctn {
-  max-width: 720px;
+  max-width: 800px;
   padding: 48px 16px;
   display: flex;
   flex-direction: column;
